==> nanoframework/nf-interpreter/targets/ChibiOS/_RP2040/cpu_spi.cpp <==
#include <ch.h>
#include <hal.h>
#include <cmsis_os.h>
#include <LaunchCLR.h>
#include <string.h>
#include <targetPAL.h>
#include <sys_dev_spi_native_target.h>
#define RP_SPI_PERI_CLK 125000000

NF_PAL_SPI *GetNfPalfromBusIndex(uint8_t busIndex)
{
    switch (busIndex)
    {
#if RP_SPI_USE_SPI0
        case 0:
            return &SPI0_PAL;
#endif
#if RP_SPI_USE_SPI1
        case 1:
            return &SPI1_PAL;
#endif
        default:
            return NULL;
    }
}

void GetSPIConfig(SPI_DEVICE_CONFIGURATION &config, SPI_WRITE_READ_SETTINGS &wrc, SPIConfig *llConfig)
{
    int32_t actualFrequency;
    uint32_t sspcpsr, sspcr0;

    ComputeBaudRate(config.Clock_RateHz, actualFrequency, sspcpsr, sspcr0);

    // SSPCR0: SCR field (from baud rate), data size bits, SPI mode
    // Data Size Select (DSS): bits [3:0], value = datasize - 1
    if (wrc.Bits16ReadWrite)
    {
        sspcr0 |= (16 - 1); // 16-bit frames
    }
    else
    {
        sspcr0 |= (8 - 1); // 8-bit frames
    }

    // SPI mode: SPO (bit 6) = CPOL, SPH (bit 7) = CPHA
    switch (config.Spi_Mode)
    {
        case SpiMode_Mode1:
            sspcr0 |= (1 << 7); // CPHA=1
            break;
        case SpiMode_Mode2:
            sspcr0 |= (1 << 6); // CPOL=1
            break;
        case SpiMode_Mode3:
            sspcr0 |= (1 << 6) | (1 << 7); // CPOL=1, CPHA=1
            break;
        default: // Mode0
            break;
    }

    llConfig->SSPCR0 = sspcr0;
    llConfig->SSPCPSR = sspcpsr;
    llConfig->end_cb = SpiCallback;
}

HRESULT CPU_SPI_nWrite_nRead(
    uint32_t deviceHandle,
    SPI_DEVICE_CONFIGURATION &sdev,
    SPI_WRITE_READ_SETTINGS &wrc,
    uint8_t *writeBuffer,
    int32_t writeSize,
    uint8_t *readBuffer,
    int32_t readSize)
{
    NANOCLR_HEADER();
    {
        NF_PAL_SPI *palSpi = (NF_PAL_SPI *)deviceHandle;
        bool sync = (wrc.callback == 0);

        palSpi->BufferIs16bits = wrc.Bits16ReadWrite;
        palSpi->Callback = wrc.callback;

        if (writeBuffer != NULL)
        {
            palSpi->WriteSize = writeSize;
            palSpi->WriteBuffer = writeBuffer;
        }

        if (readBuffer != NULL)
        {
            palSpi->ReadSize = readSize;
            palSpi->ReadBuffer = readBuffer;
        }

        palSpi->BusIndex = sdev.Spi_Bus;

        GetSPIConfig(sdev, wrc, &palSpi->Configuration);

        if (sync)
        {
            palSpi->Configuration.end_cb = NULL;
        }

        spiAcquireBus(palSpi->Driver);
        spiStart(palSpi->Driver, &palSpi->Configuration);
        spiSelect(palSpi->Driver);

        palSpi->ChipSelect = wrc.DeviceChipSelect;
        if (wrc.DeviceChipSelect >= 0)
        {
            CPU_GPIO_SetPinState(wrc.DeviceChipSelect, (GpioPinValue)wrc.ChipSelectActiveState);
        }

        if (sync)
        {
            if (palSpi->WriteSize != 0 && palSpi->ReadSize != 0)
            {
                if (wrc.fullDuplex)
                {
                    spiExchange(
                        palSpi->Driver,
                        palSpi->WriteSize > palSpi->ReadSize ? palSpi->WriteSize : palSpi->ReadSize,
                        palSpi->WriteBuffer,
                        palSpi->ReadBuffer);
                }
                else
                {
                    spiSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                    spiReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
            }
            else
            {
                if (palSpi->ReadSize != 0)
                {
                    spiReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
                else
                {
                    spiSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                }
            }

            CompleteTransfer(palSpi);

            if (wrc.DeviceChipSelect >= 0)
            {
                CPU_GPIO_SetPinState(wrc.DeviceChipSelect, (GpioPinValue)!wrc.ChipSelectActiveState);
            }
        }
        else
        {
            if (wrc.DeviceChipSelect >= 0)
            {
                CPU_GPIO_SetPinState(wrc.DeviceChipSelect, (GpioPinValue)wrc.ChipSelectActiveState);
            }

            if (palSpi->WriteSize != 0 && palSpi->ReadSize != 0)
            {
                if (wrc.fullDuplex)
                {
                    palSpi->SequentialTxRx = false;
                    spiStartExchange(
                        palSpi->Driver,
                        palSpi->WriteSize > palSpi->ReadSize ? palSpi->WriteSize : palSpi->ReadSize,
                        palSpi->WriteBuffer,
                        palSpi->ReadBuffer);
                }
                else
                {
                    palSpi->SequentialTxRx = true;
                    spiStartSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                }
            }
            else
            {
                palSpi->SequentialTxRx = false;

                if (palSpi->ReadSize != 0)
                {
                    spiStartReceive(palSpi->Driver, palSpi->ReadSize, palSpi->ReadBuffer);
                }
                else
                {
                    spiStartSend(palSpi->Driver, palSpi->WriteSize, palSpi->WriteBuffer);
                }
            }

            NANOCLR_SET_AND_LEAVE(CLR_E_BUSY);
        }
    }

    NANOCLR_NOCLEANUP();
}

bool CPU_SPI_Initialize(uint8_t busIndex, const SPI_DEVICE_CONFIGURATION &spiDeviceConfig)
{
    switch (busIndex)
    {
#if RP_SPI_USE_SPI0
        case 0:
            if (SPI0_PAL.Driver == NULL)
            {
                ConfigPins_SPI0(spiDeviceConfig);
                SPI0_PAL.Driver = &SPID0;
                SPI0_PAL.ChipSelect = spiDeviceConfig.DeviceChipSelect;
            }
            break;
#endif
#if RP_SPI_USE_SPI1
        case 1:
            if (SPI1_PAL.Driver == NULL)
            {
                ConfigPins_SPI1(spiDeviceConfig);
                SPI1_PAL.Driver = &SPID1;
                SPI1_PAL.ChipSelect = spiDeviceConfig.DeviceChipSelect;
            }
            break;
#endif
        default:
            return false;
    }

    return true;
}

bool CPU_SPI_Uninitialize(uint8_t busIndex)
{
    switch (busIndex)
    {
#if RP_SPI_USE_SPI0
        case 0:
            spiStop(&SPID0);
            SPI0_PAL.Driver = NULL;
            spiReleaseBus(&SPID0);
            break;
#endif
#if RP_SPI_USE_SPI1
        case 1:
            spiStop(&SPID1);
            SPI1_PAL.Driver = NULL;
            spiReleaseBus(&SPID1);
            break;
#endif
        default:
            return false;
    }

    return true;
}

uint32_t CPU_SPI_PortsMap()
{
    uint32_t map = 0;

#if RP_SPI_USE_SPI0
    map |= 0x01;
#endif
#if RP_SPI_USE_SPI1
    map |= 0x02;
#endif

    return map;
}
